# mpl_wrap

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: gen_graphics.py  publishing.md
src/mpl_wrap/: __init__.py  axes_wrap.py  data.py  plot.py  wrap.py
tests/: test_axes_wrap.py  test_data.py  test_plot.py  test_wrap.py
