[project]
name = "mpl_wrap"
version = "0.1.0"
description = "Matplotlib helper library for plotting wrapped, angular, or periodic data."
authors = [{ name = "Scott Shambaugh", email = "scottshambaugh@users.noreply.github.com" }]
requires-python = ">=3.10, <4"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Framework :: Matplotlib",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Visualization",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=1.26",
]

[project.urls]
Repository = "https://github.com/scottshambaugh/mpl_wrap"
Changelog = "https://github.com/scottshambaugh/mpl_wrap/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.0.0",
    "ruff>=0.14.0",
    "prek>=0.3",
    "mypy~=1.7",
]

[build-system]
requires = ["uv_build>=0.9, <0.12"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
